@@ -1,8 +1,15 @@
+2017-09-13  Richard Biener  <rguenther@suse.de>
+
+	* tree-cfg.c (verify_gimple_assign_binary): Add verification
+	for WIDEN_SUM_EXPR, VEC_WIDEN_MULT_{HI,LO,EVEN,ODD}_EXPR,
+	VEC_PACK_{TRUNC,SAT,FIX_TRUNC}_EXPR.
+	(verify_gimple_assign_ternary): Add verification for DOT_PROD_EXPR.
+
 2017-09-13  Kugan Vivekanandarajah  <kuganv@linaro.org>
 
 	* config/aarch64/aarch64.c (aarch64_override_options_after_change_1):
-	Disable pc relative literal load irrespective of TARGET_FIX_ERR_A53_84341
-	for default.
+	Disable pc relative literal load irrespective of
+	TARGET_FIX_ERR_A53_84341 for default.
 
 2017-09-12  Eric Botcazou  <ebotcazou@adacore.com>
 
